Fixed alignment of track link

--- a/app/assets/stylesheets/pages/solution-page.scss
+++ b/app/assets/stylesheets/pages/solution-page.scss
@@ -155,9 +155,6 @@
                 border-bottom:1px solid #ddd;
             }
             .track {
-                margin-left:10px;
-                vertical-align:middle;
-                display:inline-block;
                 color:#333;
                 text-decoration:none;
                 img {
